syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package paymentinfopb;

service PaymentInfoAPI {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message PaymentInfo {
	string UUID = 1;
	string userUUID = 2;
	string cardNumber = 3;
	string commentUUID = 4;
	string productUUID = 5;
	google.protobuf.Timestamp createdAt = 6;
	google.protobuf.Timestamp updatedAt = 7;
	google.protobuf.Timestamp deletedAt = 8;
}

message GetRequest {
    string UUID = 1;
}

message GetResponse {
    PaymentInfo paymentInfo = 1;
}

message SetRequest {
	PaymentInfo paymentInfo = 1;
}

message SetResponse {
	string UUID = 1;
}

message UpdateRequest {
	PaymentInfo paymentInfo = 1;
}

message DeleteRequest {
    string UUID = 1;
}
